--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,8 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">TopJava</a></h3>
 <hr>
 <ul>
-  <li><a href="users">Users</a></li>
+    <li><a href="users">Users</a></li>
+    <li><a href="meals">Meals</a></li>
 </ul>
 </body>
 </html>
